Bug 427806 - Highlight changed settings does not remember its state
Summary: Highlight changed settings does not remember its state
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.20.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-10-16 14:09 UTC by Claudius Ellsel
Modified: 2020-10-30 13:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudius Ellsel 2020-10-16 14:09:33 UTC
SUMMARY
-> See title

STEPS TO REPRODUCE
1. Open systemsettings
2. Click the button to highlight changed settings
3. Close and reopen systemsettings

OBSERVED RESULT
The state to highlight changed settings is reset to no highlight.

EXPECTED RESULT
The state should be remembered, so if I close systemsettings with highlights enabled, I expect it to also have it enabled after a restart.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.20.0
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Kernel Version: 5.8.14-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Xeon® CPU E3-1225 v3 @ 3.20GHz
Memory: 11.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics P4600/P4700

ADDITIONAL INFORMATION
Might be seen as a feature request.
Comment 1 Nikhil Prabhu 2020-10-17 07:21:27 UTC
I'd like to add something to this as well (doing it as a comment here instead of filing a new bug report since I don't feel like it's big enough to deserve a separate bug report).

Clicking fast on the "Highlight changed settings" button doesn't work properly. For example, try double-clicking or clicking a little fast (2 clicks per second) on the button and what happens basically is that the setting doesn't get detected (the option doesn't change state, but the button visually becomes enabled/disabled).

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20201014
KDE Plasma Version: 5.20.0
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Kernel Version: 5.8.14-1-default
OS Type: 64-bit
Processors: 8 × AMD Ryzen 5 3400G with Radeon Vega Graphics
Memory: 13.6 GiB of RAM
Graphics Processor: AMD RAVEN
Comment 2 Claudius Ellsel 2020-10-17 13:35:15 UTC
(In reply to Nikhil Prabhu from comment #1)
> I'd like to add something to this as well (doing it as a comment here
> instead of filing a new bug report since I don't feel like it's big enough
> to deserve a separate bug report).

This should go to a new bug report. That makes tracking those different problems much easier without confusing things. It is not bad to open bug reports, even for small things :) Maybe you can post a link to the new bug here, so I can followup there.
Comment 3 Nikhil Prabhu 2020-10-17 14:58:41 UTC
(In reply to Claudius Ellsel from comment #2)
> (In reply to Nikhil Prabhu from comment #1)
> > I'd like to add something to this as well (doing it as a comment here
> > instead of filing a new bug report since I don't feel like it's big enough
> > to deserve a separate bug report).
> 
> This should go to a new bug report. That makes tracking those different
> problems much easier without confusing things. It is not bad to open bug
> reports, even for small things :) Maybe you can post a link to the new bug
> here, so I can followup there.

I've created a new bug report here: https://bugs.kde.org/show_bug.cgi?id=427869
Comment 4 Benjamin Port 2020-10-30 08:23:46 UTC
Git commit 9582a45576d5f005fe75a8659f1005ca3d3f6734 by Benjamin Port.
Committed on 30/10/2020 at 08:23.
Pushed by bport into branch 'master'.

Save highlight default state

M  +7    -0    sidebar/SidebarMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/9582a45576d5f005fe75a8659f1005ca3d3f6734
Comment 5 Benjamin Port 2020-10-30 08:31:09 UTC
Git commit 35db75d5618282c39d5ed17fcb8937969761a670 by Benjamin Port.
Committed on 30/10/2020 at 08:30.
Pushed by bport into branch 'Plasma/5.20'.

Save highlight default state

M  +7    -0    sidebar/SidebarMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/35db75d5618282c39d5ed17fcb8937969761a670