Save highlight default state

BUG: 427806